--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,7 @@
 		<dependency>
 			<groupId>io.cloudevents</groupId>
 			<artifactId>cloudevents-spring</artifactId>
+			<version>4.0.1</version>
 		</dependency>
 
 		<!-- Database Connector -->
