--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,6 +7,7 @@ substitutions:
   _DB_USERNAME: cdc-online-thumbnail-service-db-username
   _DB_PASSWORD: cdc-online-thumbnail-service-db-password
   _DB_MAX_POOL_SIZE: "5"
+  _SPRING_PROFILE: prod
   _GCS_RAW_BUCKET: cdc-online-thumbnail-service-bucket-raw-images
   _GCS_THUMBNAILS_BUCKET: cdc-online-thumbnail-service-bucket-thumbnails
 
@@ -39,6 +40,7 @@ steps:
       - '--set-cloudsql-instances=${_CLOUDSQL_INSTANCE}'
       - '--set-env-vars=SPRING_CLOUD_GCP_SQL_DATABASE_NAME=${_DB_NAME}'
       - '--set-env-vars=SPRING_CLOUD_GCP_SQL_INSTANCE_CONNECTION_NAME=${_CLOUDSQL_INSTANCE}'
+      - '--set-env-vars=SPRING_PROFILES_ACTIVE=${_SPRING_PROFILE}'
       - '--set-env-vars=spring.datasource.hikari.maximum-pool-size=${_DB_MAX_POOL_SIZE}'
       - '--set-env-vars=gcs.bucket.raw-images=${_GCS_RAW_BUCKET}'
       - '--set-env-vars=gcs.bucket.thumbnails=${_GCS_THUMBNAILS_BUCKET}'
